--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Site Properties -->
-    <title>Fina - Financial HTML5 Template</title>
+    <title>Fina - Financial Credit Union</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
     <!-- Google Fonts -->
