--- a/about.html
+++ b/about.html
@@ -281,8 +281,8 @@
                         <a href="" class="uk-icon-button" data-uk-icon="icon: youtube"></a>
                     </div>
                     <div class="idz-footer-download uk-visible@m">
-                        <a href=""><img src="images/download_apple.png" alt=""></a>
-                        <a href=""><img src="images/download_google.png" alt=""></a>
+                        <a href=""><img src="/images/download_apple.png" alt=""></a>
+                        <a href=""><img src="/images/download_google.png" alt=""></a>
                     </div>
                 </div>
                 <div class="uk-width-1-1 uk-margin-large-top uk-margin-large-bottom">
