--- a/tab-accordion.html
+++ b/tab-accordion.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Site Properties -->
     <title>Fina - Financial Credit Union</title>
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon-precomposed" href="/images/apple-touch-icon.png">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
@@ -25,7 +25,7 @@
                 <div class="uk-width-2-5@l uk-width-1-3@m uk-width-1-4@s">
                     <!-- logo header begin -->
                     <div id="header-logo">
-                        <a class="uk-logo" href="index.html"><img src="images/logo_header.svg" alt="fina finance" /></a>
+                        <a class="uk-logo" href="index.html"><img src="/images/logo_header.svg" alt="fina finance" /></a>
                     </div>
                     <!-- logo header end -->
                 </div>
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                         <div class="uk-width-1-2 phone-number">
-                            <h2 class="uk-align-right">1-800-123-4567</h2>
+                            <h2 class="uk-align-right">1-833-563-2155</h2>
                         </div>
                     </div>
                 </div>
@@ -281,7 +281,7 @@
                         </li>
                         <li>
                             <h3 class="uk-accordion-title">Inventore veritatis architecto ?</h3>
-                            <div class="uk-accordion-content"> <img class="uk-align-left uk-margin-remove-adjacent uk-box-shadow-medium" src="images/content/img_sample.jpg" alt="">
+                            <div class="uk-accordion-content"> <img class="uk-align-left uk-margin-remove-adjacent uk-box-shadow-medium" src="/images/content/img_sample.jpg" alt="">
                                 <h5 class="uk-margin-remove-bottom">Image on content</h5>
                                 <p class="uk-margin-small-top">At vero eos et accusamus et iusto odio dignissimos ducimus qui facilis blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui offici deserunt mollitia animi idest laborum et dolorum fuga eta harum quidem rerum.</p>
                             </div>
@@ -326,14 +326,14 @@
                         <a href="" class="uk-icon-button" data-uk-icon="icon: youtube"></a>
                     </div>
                     <div class="idz-footer-download uk-visible@m">
-                        <a href=""><img src="images/download_apple.png" alt=""></a>
-                        <a href=""><img src="images/download_google.png" alt=""></a>
+                        <a href=""><img src="/images/download_apple.png" alt=""></a>
+                        <a href=""><img src="/images/download_google.png" alt=""></a>
                     </div>
                 </div>
                 <div class="uk-width-1-1 uk-margin-large-top uk-margin-large-bottom">
                     <!-- logo footer begin -->
                     <div id="footer-logo">
-                        <a class="uk-logo" href="index.html"><img src="images/logo_footer.svg" alt="fina finance" /></a>
+                        <a class="uk-logo" href="index.html"><img src="/images/logo_footer.svg" alt="fina finance" /></a>
                         <p><span>Copyright ©2017 Fina Capital Corporation. All Rights Reserved.</span></p>
                     </div>
                     <!-- logo footer end -->
