--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Site Properties -->
-    <title>Fina - FinancialCredit Union</title>
+    <title>Fina - Financial Credit Union</title>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon-precomposed" href="/images/apple-touch-icon.png">
     <!-- Google Fonts -->
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                         <div class="uk-width-1-2 phone-number">
-                            <h2 class="uk-align-right">1-833-563-2155</h2>
+                            <h2 class="uk-align-right"><a href="tel:833-563-2155">1-833-563-2155</a></h2>
                         </div>
                     </div>
                 </div>
