--- a/single.html
+++ b/single.html
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                         <div class="uk-width-1-2 phone-number">
-                            <h2 class="uk-align-right">1-833-563-2155</h2>
+                            <h2 class="uk-align-right"><a href="tel:833-563-2155">1-833-563-2155</a></h2>
                         </div>
                     </div>
                 </div>
