--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Standard Meta -->
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="telephone=yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Site Properties -->
     <title>Fina - Financial Credit Union</title>
