--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Standard Meta -->
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="telephone=yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Site Properties -->
     <title>Fina - Financial Credit Union</title>
@@ -14,9 +14,9 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:300,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/uikit.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/components/font-awesome.css"> </head>
+    <link rel="stylesheet" href="/css/uikit.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/components/font-awesome.css"> </head>
 
 <body>
     <header>
@@ -199,8 +199,8 @@
                         <div>
                             <h6 class="uk-text-uppercase uk-margin-remove-bottom">Manhattan Office</h6>
                             <p class="uk-margin-small-top uk-margin-remove-bottom">Level 34, Scott Square,
-                                <br/>Scott Street, 4268, New York,
-                                <br/>United States America</p> <span class="uk-label uk-label-success uk-margin-small-top uk-margin-medium-bottom">Tel : 1-833-563-2155</span> </div>
+                                <br/>Scott Street, New York,
+                                <br/>United States America</p> <span class="uk-label uk-label-success uk-margin-small-top uk-margin-medium-bottom"><a href="tel:833-563-2155">1-833-563-2155</a></span> </div>
                
                     </div>
                 </div>
