--- a/index-layout4.html
+++ b/index-layout4.html
@@ -4,20 +4,20 @@
 <head>
     <!-- Standard Meta -->
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="telephone=yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Site Properties -->
     <title>Fina - Financial Credit Union</title>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon-precomposed" href="/mages/apple-touch-icon.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/apple-touch-icon.png">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/uikit.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/components/swiper.css">
-    <link rel="stylesheet" href="css/components/font-awesome.css"> </head>
+    <link rel="stylesheet" href="/css/uikit.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/components/swiper.css">
+    <link rel="stylesheet" href="/css/components/font-awesome.css"> </head>
 
 <body>
     <header class="idz-header-alt">
