--- a/single.html
+++ b/single.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Standard Meta -->
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="telephone=yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Site Properties -->
     <title>Fina - Financial Credit Union</title>
@@ -14,10 +14,10 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:300,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/uikit.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/components/mediaelement.css">
-    <link rel="stylesheet" href="css/components/font-awesome.css"> </head>
+    <link rel="stylesheet" href="/css/uikit.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/components/mediaelement.css">
+    <link rel="stylesheet" href="/css/components/font-awesome.css"> </head>
 
 <body>
     <header>
