--- a/404-error.html
+++ b/404-error.html
@@ -102,7 +102,7 @@
                             </ul>
                         </div>
                         <div class="uk-navbar-right uk-visible@l">
-                            <div data-uk-margin> <a class="uk-button uk-button-default" href="">Demo</a> <a class="uk-button uk-button-primary" href="">Create Account</a> </div>
+                            <div data-uk-margin> <a class="uk-button uk-button-default" href="tel:833-563-2155">Demo</a> <a class="uk-button uk-button-primary" href="tel:833-563-2155">Create Account</a> </div>
                         </div>
                     </nav>
                     <!-- Main navigation end -->
