--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                         <div class="uk-width-1-2 phone-number">
-                            <h2 class="uk-align-right"><a href="tel:833-563-2155">1-833-563-2155</a></h2>
+                            <h2 class="uk-align-right uk-visible@s"><a href="tel:833-563-2155">1-833-563-2155</a></h2>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                             </ul>
                         </div>
                         <div class="uk-navbar-right uk-visible@l">
-                            <div data-uk-margin> <a class="uk-button uk-button-default" href="">Demo</a> <a class="uk-button uk-button-primary" href="">Create Account</a> </div>
+                            <div data-uk-margin> <a class="uk-button uk-button-default" href="tel:833-563-2155">Demo</a> <a class="uk-button uk-button-primary" href="tel:833-563-2155">Create Account</a> </div>
                         </div>
                     </nav>
                     <!-- Main navigation end -->
@@ -162,6 +162,7 @@
                                 <div class="uk-width-3-4@l uk-width-1-1@s uk-margin-medium-left">
                                     <h1 class="uk-margin-small-bottom">Modern investment advice means having better choices.</h1>
                                     <h3 class="uk-margin-small-top uk-margin-medium-bottom idz-thin uk-visible@m">You do life, we do investing</h3> <a class="uk-button uk-button-primary" href="">Learn More</a> <a class="uk-button uk-button-secondary uk-margin-small-left uk-visible@m" href="">Create Account</a>
+                                    <h3 class="uk-margin-small-bottom"><a href="tel:833-563-2155">1-833-563-2155</a></h3>
                                 </div>
                             </div>
                         </div>
