--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                             <div class="uk-grid">
                                 <div class="uk-width-1-1 uk-align-center uk-text-center">
                                     <h1 class="uk-margin-small-bottom">Don't wait. Open an account today.</h1>
+                                    <h3 class="uk-margin-small-bottom"><a href="'tel:833-563-2155">1-833-563-2155</a></h3>
                                     <h3 class="uk-margin-small-top uk-margin-bottom idz-thin uk-visible@m">Get up to $600 plus 60 days of commission-free stocks and options trades</h3>
                                     <form class="uk-grid-small" data-uk-grid>
                                         <div class="uk-width-1-4@s uk-visible@m">
