--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                         <div class="uk-width-1-4@s uk-visible@m">
                                             <input class="uk-input" type="text" placeholder="Phone number"> </div>
                                         <div class="uk-width-1-4@s">
-                                            <button class="uk-button uk-width-1-1 uk-button-secondary">Create Account</button>
+                                            <button class="uk-button uk-width-1-1 uk-button-secondary"><a href="tel:833-563-2155">Create Account</a></button>
                                         </div>
                                     </form>
                                 </div>
