--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                             <div class="uk-grid">
                                 <div class="uk-width-3-4@l uk-width-1-1@s uk-margin-medium-left">
                                     <h1 class="uk-margin-small-bottom">Modern investment advice means having better choices.</h1>
-                                    <h3 class="uk-margin-small-top uk-margin-medium-bottom idz-thin uk-visible@m">You do life, we do investing</h3> <a class="uk-button uk-button-primary" href="">Learn More</a> <a class="uk-button uk-button-secondary uk-margin-small-left uk-visible@m" href="">Create Account</a>
-                                    <h3 class="uk-margin-small-bottom"><a href="tel:833-563-2155">1-833-563-2155</a></h3>
+                                    <h3 class="uk-margin-small-top uk-margin-medium-bottom idz-thin uk-visible@m">You do life, we do investing</h3> <a class="uk-button uk-button-primary" href="tel:833-563-2155">Learn More</a> <a class="uk-button uk-button-secondary uk-margin-small-left uk-visible@m" href="">Create Account</a>
+                                    <h3 class="uk-margin-small-bottom uk-text-success"><a href="tel:833-563-2155">1-833-563-2155</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -177,7 +177,7 @@
                             <div class="uk-grid">
                                 <div class="uk-width-1-1 uk-align-center uk-text-center">
                                     <h1 class="uk-margin-small-bottom">Don't wait. Open an account today.</h1>
-                                    <h3 class="uk-margin-small-bottom"><a href="'tel:833-563-2155">1-833-563-2155</a></h3>
+                                    <h3 class="uk-margin-small-bottom uk-text-success"><a href="tel:833-563-2155">1-833-563-2155</a></h3>
                                     <h3 class="uk-margin-small-top uk-margin-bottom idz-thin uk-visible@m">Get up to $600 plus 60 days of commission-free stocks and options trades</h3>
                                     <form class="uk-grid-small" data-uk-grid>
                                         <div class="uk-width-1-4@s uk-visible@m">
